fix #224 candy app: tooltips inner padding reduced to fit in dashboard page on mobile view on small screens

--- a/src/styles/components/_tooltips.scss
+++ b/src/styles/components/_tooltips.scss
@@ -10,3 +10,6 @@
 		font-weight: $bold;
 	}
 }
+.__react_component_tooltip{
+	padding: 8px;
+}
